[gd_scene load_steps=6 format=3 uid="uid://hp8gka2eiy6h"]

[ext_resource type="Texture2D" uid="uid://d3tpj36e823ix" path="res://assets/debris.png" id="1_0cgsn"]
[ext_resource type="Script" path="res://scenes/effects/debris.gd" id="1_xmx4l"]

[sub_resource type="Animation" id="Animation_cgvsh"]
resource_name = "block_destruction"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DebrisNW:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-4, -6), Vector2(-32, -48), Vector2(-52, -4.082), Vector2(-128, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DebrisNE:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.02, 0.2, 0.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, -6), Vector2(32, -48), Vector2(52, -4.082), Vector2(128, 300)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DebrisSW:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.02, 0.2, 0.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-4, 0), Vector2(-32, -8), Vector2(-52, 32.712), Vector2(-128, 300)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DebrisSE:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(-0.01, 0.2, 0.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 0), Vector2(32, -8), Vector2(52, 32.712), Vector2(128, 300)]
}

[sub_resource type="Animation" id="Animation_c2dbb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DebrisNW:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DebrisNE:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DebrisSW:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DebrisSE:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_15ki3"]
_data = {
"RESET": SubResource("Animation_c2dbb"),
"block_destruction": SubResource("Animation_cgvsh")
}

[node name="Debris" type="Node2D"]
script = ExtResource("1_xmx4l")

[node name="DebrisNW" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(-4, -6)
texture = ExtResource("1_0cgsn")

[node name="DebrisNE" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(4, -6)
texture = ExtResource("1_0cgsn")

[node name="DebrisSW" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(-4, 0)
texture = ExtResource("1_0cgsn")

[node name="DebrisSE" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(4, 0)
texture = ExtResource("1_0cgsn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_15ki3")
}

[node name="Rotation" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Rotation" to="." method="_on_rotation_timeout"]
